--- a/centros-laborales/index.html
+++ b/centros-laborales/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EFSRT — Registro</title>
+    <title>EFSRT — Centros Laborales</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700;800;900&amp;display=swap"
@@ -73,14 +73,6 @@
       }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!-- FilePond (drag & drop file input) -->
-    <link
-      href="https://unpkg.com/filepond/dist/filepond.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://unpkg.com/filepond/dist/filepond.min.js"></script>
-    <script src="https://unpkg.com/filepond-plugin-file-validate-size/dist/filepond-plugin-file-validate-size.min.js"></script>
-    <script src="https://unpkg.com/filepond-plugin-file-validate-type/dist/filepond-plugin-file-validate-type.min.js"></script>
   </head>
   <body class="bg-background-light text-[#0d121b] antialiased">
     <main class="max-w-4xl mx-auto p-6 md:p-12">
@@ -498,18 +490,50 @@
             </div>
 
             <div class="md:col-span-2">
-              <label class="text-sm font-semibold"
+              <label class="text-sm font-semibold mb-2 block"
                 >Adjuntar constancia de trabajo (PDF)
                 <span class="required-star">*</span></label
               >
-              <input
-                id="constancia-input"
-                name="constancia"
-                type="file"
-                accept="application/pdf"
-                required
-                class="mt-2 w-full text-sm"
-              />
+
+              <div
+                id="drop-zone"
+                class="border-2 border-dashed border-gray-300 rounded-xl p-8 text-center hover:bg-gray-50 transition-colors cursor-pointer relative"
+              >
+                <input
+                  id="constancia-input"
+                  name="constancia"
+                  type="file"
+                  accept="application/pdf"
+                  required
+                  class="absolute inset-0 w-full h-full opacity-0 cursor-pointer"
+                />
+                <div class="pointer-events-none">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-10 w-10 text-gray-400 mx-auto mb-3"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
+                    />
+                  </svg>
+                  <p class="text-sm text-gray-600 font-medium">
+                    <span class="text-primary hover:underline"
+                      >Haz clic para subir</span
+                    >
+                    o arrastra y suelta
+                  </p>
+                  <p id="file-name-display" class="text-xs text-gray-500 mt-1">
+                    Solo PDF hasta 10MB
+                  </p>
+                </div>
+              </div>
+
               <p class="text-xs text-gray-500 mt-1">
                 Tamaño máximo: 10 MB. Solo PDF.
               </p>
@@ -734,7 +758,13 @@
         const required = Array.from(fs.querySelectorAll('[required]'))
         for (const el of required) {
           if (el.type === 'file') {
-            if (!el.files || el.files.length === 0) return el
+            if (!el.files || el.files.length === 0) {
+              console.error(
+                'Validación falló en archivo requerido:',
+                el.name || el.id,
+              )
+              return el
+            }
             // Validar tamaño máximo 10MB (10 * 1024 * 1024 bytes)
             if (el.files[0].size > 10 * 1024 * 1024) {
               Swal.fire({
@@ -742,23 +772,32 @@
                 title: 'Archivo muy pesado',
                 text: 'El archivo adjunto no debe superar los 10MB.',
               })
+              console.error(
+                'Validación falló en tamaño de archivo:',
+                el.name || el.id,
+              )
               return el
             }
-          } else if (!el.value || el.value.toString().trim() === '') return el
-        }
-
-        // Check word count on actividades (step 3 index 2)
-        if (index === 2) {
-          const textarea = fs.querySelector('textarea[name="actividades"]')
-          if (textarea) {
-            const words = textarea.value.trim().split(/\s+/).filter(Boolean)
-            if (words.length < MIN_WORDS) {
-              Swal.fire({
-                icon: 'warning',
-                title: 'Actividad muy corta',
-                text: `La descripción debe tener al menos ${MIN_WORDS} palabras.`,
-              })
-              return textarea
+          } else if (!el.value || el.value.toString().trim() === '') {
+            console.error(
+              'Validación falló en campo requerido:',
+              el.name || el.id,
+              el,
+            )
+            return el
+          } else {
+            // For checkboxes/radios if they were required but skipped by logic above?
+            // But they have .value usually.
+            // If type="checkbox", .value is "on" usually. check .checked
+            if (
+              (el.type === 'checkbox' || el.type === 'radio') &&
+              !el.checked
+            ) {
+              console.log(
+                'Validación falló en checkbox/radio requerido:',
+                el.name || el.id,
+              )
+              return el
             }
           }
         }
@@ -772,12 +811,13 @@
           if (emailInput && emailInput.value) {
             const email = emailInput.value.trim().toLowerCase()
             if (!email.endsWith('@neumann.global')) {
+              console.error('Validación falló: Correo no es @neumann.global')
               Swal.fire({
                 icon: 'warning',
                 title: 'Correo inválido',
                 text: 'El correo estudiantil debe ser del dominio @neumann.global',
               })
-              return emailInput // Retorna el elemento para que reciba foco si se maneja afuera
+              return emailInput
             }
           }
         }
@@ -788,6 +828,7 @@
           if (horasInput && horasInput.value) {
             const h = parseInt(horasInput.value, 10)
             if (h < 64) {
+              console.error('Validación falló: Horas insuficientes (' + h + ')')
               Swal.fire({
                 icon: 'warning',
                 title: 'Horas insuficientes',
@@ -1083,7 +1124,7 @@
         const counter = document.getElementById('word-count')
         if (!textarea || !counter) return
         const words = textarea.value.trim().split(/\s+/).filter(Boolean)
-        counter.textContent = `${words.length}/${MIN_WORDS} palabras`
+        counter.textContent = `${words.length} palabras`
       }
 
       const actividadesEl = document.getElementById('actividades-input')
@@ -1091,35 +1132,61 @@
         actividadesEl.addEventListener('input', updateWordCount)
       }
 
-      // Initialize FilePond on the constancia input for drag-drop and validation
-      FilePond.registerPlugin(
-        FilePondPluginFileValidateType,
-        FilePondPluginFileValidateSize,
-      )
-      const pond = FilePond.create(
-        document.querySelector('#constancia-input'),
-        {
-          acceptedFileTypes: ['application/pdf'],
-          maxFileSize: '10MB',
-          labelIdle:
-            'Arrastra tu PDF o <span class="filepond--label-action">Examinar</span>',
-        },
-      )
+      // Initialize Custom Drag & Drop Logic
+      const dropZone = document.getElementById('drop-zone')
+      const fileInput = document.getElementById('constancia-input')
+      const fileNameDisplay = document.getElementById('file-name-display')
 
-      // keep a fallback check just in case
-      const pondInput = document.querySelector('#constancia-input')
-      if (pondInput) {
-        pondInput.addEventListener('change', () => {
-          const file = pondInput.files[0]
-          if (file && file.size > 10 * 1024 * 1024) {
-            Swal.fire({
-              icon: 'warning',
-              title: 'Archivo demasiado grande',
-              text: 'El archivo PDF no debe superar los 10 MB.',
-            })
-            pond.removeFile()
+      if (dropZone && fileInput) {
+        // Highlight on drag
+        dropZone.addEventListener('dragover', (e) => {
+          e.preventDefault()
+          dropZone.classList.add('bg-blue-50', 'border-primary')
+        })
+
+        dropZone.addEventListener('dragleave', (e) => {
+          e.preventDefault()
+          dropZone.classList.remove('bg-blue-50', 'border-primary')
+        })
+
+        dropZone.addEventListener('drop', (e) => {
+          e.preventDefault()
+          dropZone.classList.remove('bg-blue-50', 'border-primary')
+          if (e.dataTransfer.files.length) {
+            fileInput.files = e.dataTransfer.files
+            updateFileDisplay()
           }
         })
+
+        fileInput.addEventListener('change', updateFileDisplay)
+
+        function updateFileDisplay() {
+          if (fileInput.files.length > 0) {
+            const file = fileInput.files[0]
+            if (file.size > 10 * 1024 * 1024) {
+              Swal.fire({
+                icon: 'warning',
+                title: 'Archivo demasiado grande',
+                text: 'El archivo PDF no debe superar los 10 MB.',
+              })
+              fileInput.value = ''
+              if (fileNameDisplay) {
+                fileNameDisplay.textContent = 'Solo PDF hasta 10MB'
+                fileNameDisplay.classList.remove('text-primary', 'font-bold')
+              }
+              return
+            }
+            if (fileNameDisplay) {
+              fileNameDisplay.textContent = `Archivo seleccionado: ${file.name} (${(file.size / 1024 / 1024).toFixed(2)} MB)`
+              fileNameDisplay.classList.add('text-primary', 'font-bold')
+            }
+          } else {
+            if (fileNameDisplay) {
+              fileNameDisplay.textContent = 'Solo PDF hasta 10MB'
+              fileNameDisplay.classList.remove('text-primary', 'font-bold')
+            }
+          }
+        }
       }
 
       loadDraftOnStart()
