--- a/centros-laborales/index.html
+++ b/centros-laborales/index.html
@@ -597,8 +597,8 @@
 
       // TEMPORAL: desactivar validación de correo para pruebas.
       // Recordar: ajustar a `false` o eliminar antes de pasar a producción.
-      const SKIP_EMAIL_VALIDATION = true
-      const MIN_WORDS = 200
+      const SKIP_EMAIL_VALIDATION = false
+      const MIN_WORDS = 150
 
       const stepTitles = [
         { title: 'Estudiante', subtitle: 'Datos personales' },
