--- a/centros-laborales/index.html
+++ b/centros-laborales/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EFSRT — Centros Laborales</title>
+    
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link rel="icon" type="image/png" href="icono.png">
     <link
       href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700;800;900&amp;display=swap"
       rel="stylesheet"
@@ -1195,4 +1197,5 @@
     </script>
   </body>
 </html>
+
 
