--- a/centros-laborales/index.html
+++ b/centros-laborales/index.html
@@ -599,7 +599,7 @@
 
       // TEMPORAL: desactivar validación de correo para pruebas.
       // Recordar: ajustar a `false` o eliminar antes de pasar a producción.
-      const SKIP_EMAIL_VALIDATION = false
+      const SKIP_EMAIL_VALIDATION = true
       const MIN_WORDS = 150
 
       const stepTitles = [
@@ -1197,5 +1197,6 @@
     </script>
   </body>
 </html>
+
 
 
