--- a/procesos-institucionales/index.html
+++ b/procesos-institucionales/index.html
@@ -287,7 +287,7 @@
                 name="correo_estudiantil"
                 type="email"
                 required
-                placeholder="usuario@neumann.global o @neumann.education"
+                placeholder="usuario@neumann.global"
                 class="mt-2 w-full pl-4 pr-3 py-3 rounded-lg border border-gray-200 focus:border-primary focus:ring-2 focus:ring-primary/20 bg-background-light/50 text-sm outline-none"
               />
             </div>
