--- a/proyecto-social/index.html
+++ b/proyecto-social/index.html
@@ -9,6 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700;800;900&amp;display=swap"
       rel="stylesheet"
     />
+        <link rel="icon" type="image/png" href="icono.png">
+
     <script id="tailwind-config">
       tailwind.config = {
         darkMode: 'class',
