--- a/procesos-institucionales/index.html
+++ b/procesos-institucionales/index.html
@@ -871,7 +871,7 @@
                       Swal.fire({
                         icon: 'success',
                         title: '¡Éxito!',
-                        text: 'Tu formulario ha sido enviado y registrado correctamente. (Demo)',
+                        text: 'Tu formulario ha sido enviado y registrado correctamente.',
                       })
                       form.reset()
                       clearDraft()
